<resources>
    <string name="app_name">Greenhouses</string>
    <string name="refresh">Обновить</string>
    <string name="error">Извините, что-то пошло не так.\nМы работаем над тем, чтобы\nисправить это как можно скорее.</string>
    <string name="error_toast">Извините, что-то пошло не так.</string>
    <string name="error_code">Неверный код</string>
    <string name="empty" />

    <!-- Authorization -->
    <string name="authorization_title">Авторизация пользователя</string>
    <string name="authorization_hint_number_phone">Введите номер телефона</string>
    <string name="authorization_send_code">Отправить код с подтверждением</string>

    <!-- CodeConfirm -->
    <string name="code_confirm">Введите код подтверждения</string>
    <string name="send_code_confirm">Подтвердить код</string>

    <!-- Profile -->
    <string name="profile_title">Информация об аккаунте</string>
    <string name="profile_title_phone">Номер телефона</string>
    <string name="profile_title_name">Имя</string>
    <string name="profile_title_login">Логин</string>
    <string name="profile_title_zodiac">Знак зодиака</string>
    <string name="profile_title_city">Город</string>
    <string name="profile_title_birthday">Дата рождения</string>
    <string name="profile_title_about">О себе</string>
    <string name="profile_log_out">Выйти из аккаунта</string>

    <!-- Registration -->
    <string name="registration_title_number_phone">Ваш номер телефона: %s</string>
    <string name="registration">Регистрация</string>
    <string name="registration_name">Введите имя</string>
    <string name="registration_login">Введите логин</string>
    <string name="registration_hint_login">Логин может содержать:\n- Заглавные и строчные латинские буквы\n- Цифры от 0 до 9\n- Символы: -_\n- Минимальное количество элементов: 5</string>
    <string name="registration_register">Зарегистрироваться </string>
    <string name="registration_name_error">Поле не может быть пустым</string>
    <string name="registration_login_error">Некоректный логин</string>

    <!-- EditProfile -->
    <string name="edit_profile">Редактирование профиля</string>
    <string name="menu">Menu</string>
    <string name="edit_name">Введите имя</string>
    <string name="edit_city">Введите город</string>
    <string name="edit_birthday">Введите дату рождения</string>

    <!-- Zodiac -->
    <string name="zodiac_aquaris">Водолей</string>
    <string name="zodiac_pisces">Рыбы</string>
    <string name="zodiac_capricon">Козерог</string>
    <string name="zodiac_sagittarius">Стрелец</string>
    <string name="zodiac_scorpio">Скорпион</string>
    <string name="zodiac_libra">Весы</string>
    <string name="zodiac_virgo">Дева</string>
    <string name="zodiac_leo">Лев</string>
    <string name="zodiac_cancer">Рак</string>
    <string name="zodiac_gemini">Близнецы</string>
    <string name="zodiac_taurus">Телец</string>
    <string name="zodiac_laries">Овен</string>
    <string name="zodiac_error">Произошла ошибка</string>
</resources>
